2005-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* applications.src: Added SMEG
	
	* consulting.src: New page

	* head.src, feedback.src: Add links to consulting

2005-05-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Pyne

2005-05-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added DelVJ, OnTV, Serpentine and
	Smart Package Manager

2005-04-19  Christian Reis <kiko@async.com.br>

	* newsitems.py: It's 2005 :)

2005-04-13  John Finlay  <finlay@moeraki.com>

	* newsitems.py: Added tut 2.4 announcement

	* tutorial.src: Updated date and rev number.

2005-04-12  Christian Reis <kiko@async.com.br>

	* head.src: Adding a link to our new Wiki!

2005-04-10  John Finlay  <finlay@moeraki.com>

	* newsitems.py: Added ref 2.6.0 announcement

2005-03-21  Christian Reis <kiko@async.com.br>

	* applications.py: added gSmile

2005-03-16  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py: added 2.6.1 announcement

2005-03-15  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added PyMusique, Mapview and pyGPS

2005-03-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): added 2.6.0 release (pachi)

2005-03-05  John Finlay  <finlay@moeraki.com>

	* newsitems.py: Announce PyGTK Reference 2.5.2

	* reference.src Update release info.

2005-03-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Gajim

2005-01-23  Johan Dahlin  <johan@gnome.org>

        * newsitems.py (item): PyGTK 2.5.3

2005-02-21  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Gazpacho and Sabayon

2005-02-04  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): added item for Gazpacho 0.5.0

2005-01-28  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py : Gazpacho 0.4.0

	* feed.py: added support for authors in the news

	* applications.src: updated Sketch to Skencil (pachi)

2005-01-23  Johan Dahlin  <johan@gnome.org>

	* newsitems.py (item): PyGTK 2.5.3
