@@ -1,5 +1,7 @@
 2005-05-09  Johan Dahlin  <jdahlin@async.com.br>
 
+	* newsitems.py (item): Release 2.6.2
+
 	* applications.src: Added SMEG
 	
 	* consulting.src: New page
